--- a/main.html
+++ b/main.html
@@ -7,87 +7,12 @@
 </head>
 
 <body>
+	<h1>this is heading</h1>
+	<button type="submit">button</button>
 	<div>
-    <!-- button -->
-    <div class="block">
-        <button data-ns-test="block-inline-button">Test1</button>
-    </div>
-    <div class="inline">
-        <button data-ns-test="block-inline-button">Test2</button>
-    </div>
-
-    <!-- div -->
-    <div class="block">
-        <div data-ns-test="block-inline-div">Test1</div>
-    </div>
-    <div class="inline">
-        <div data-ns-test="block-inline-div">Test2</div>
-    </div>
-
-    <!-- span -->
-    <div class="block">
-        <span data-ns-test="block-inline-span">Test1</span>
-    </div>
-    <div class="inline">
-        <span data-ns-test="block-inline-span">Test2</span>
-    </div>
-
-    <!-- p -->
-    <div class="block">
-        <p data-ns-test="block-inline-p">Test1</p>
-    </div>
-    <div class="inline">
-        <p data-ns-test="block-inline-p">Test2</p>
-    </div>
-
-    <!-- input -->
-    <div class="block">
-        <input type="text" data-ns-test="block-inline-input" value="Test1">
-    </div>
-    <div class="inline">
-        <input type="text" data-ns-test="block-inline-input" value="Test2">
-    </div>
-
-    <!-- cite -->
-    <div class="block">
-        <cite data-ns-test="block-inline-cite">Test1</cite>
-    </div>
-    <div class="inline">
-        <cite data-ns-test="block-inline-cite">Test2</cite>
-    </div>
-
-    <!-- code -->
-    <div class="block">
-        <code data-ns-test="block-inline-code">Test1</code>
-    </div>
-    <div class="inline">
-        <code data-ns-test="block-inline-code">Test2</code>
-    </div>
-
-    <!-- h1 -->
-    <div class="block">
-        <h1 data-ns-test="block-inline-h1">Test1</h1>
-    </div>
-    <div class="inline">
-        <h1 data-ns-test="block-inline-h1">Test2</h1>
-    </div>
-
-    <!-- sup -->
-    <div class="block">
-        <sup data-ns-test="block-inline-sup">Test1</sup>
-    </div>
-    <div class="inline">
-        <sup data-ns-test="block-inline-sup">Test2</sup>
-    </div>
-
-    <!-- sub -->
-    <div class="block">
-        <sub data-ns-test="block-inline-sub">Test1</sub>
-    </div>
-    <div class="inline">
-        <sub data-ns-test="block-inline-sub">Test2</sub>
-    </div>
-</div>
+		<p>this is a <span style=""> journey</span></p>
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
