--- a/main.html
+++ b/main.html
@@ -1,22 +1,94 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        [data-ns-test="block-inline-button"] {
+            display: inline-block;
+        }
+
+        [data-ns-test="block-inline-div"] {
+            display: block;
+        }
+
+        [data-ns-test="block-inline-span"] {
+            display: inline;
+        }
+
+        [data-ns-test="block-inline-p"] {
+            display: block;
+        }
+
+        [data-ns-test="block-inline-input"] {
+            display: inline-block;
+        }
+
+        [data-ns-test="block-inline-cite"],
+        [data-ns-test="block-inline-code"],
+        [data-ns-test="block-inline-sup"],
+        [data-ns-test="block-inline-sub"] {
+            display: inline;
+        }
+
+        [data-ns-test="block-inline-h1"] {
+            display: block;
+        }
+    </style>
+    <title>Block or Inline</title>
 </head>
-
 <body>
-	<h1>this is heading</h1>
-	<button type="submit">button</button>
-	<div>
-		<p>this is a <span style=""> journey</span></p>
-	</div>
-	
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div>
+        <button data-ns-test="block-inline-button">Test1</button>
+        <button data-ns-test="block-inline-button">Test2</button>
+    </div>
 
+    <div data-ns-test="block-inline-div">
+        Test1
+        <br>
+        Test2
+    </div>
+
+    <div>
+        <span data-ns-test="block-inline-span">Test1</span>
+        <span data-ns-test="block-inline-span">Test2</span>
+    </div>
+
+    <div data-ns-test="block-inline-p">
+        Test1
+        <br>
+        Test2
+    </div>
+
+    <div>
+        <input type="text" data-ns-test="block-inline-input" value="Test1">
+        <input type="text" data-ns-test="block-inline-input" value="Test2">
+    </div>
+
+    <div>
+        <cite data-ns-test="block-inline-cite">Test1</cite>
+        <cite data-ns-test="block-inline-cite">Test2</cite>
+    </div>
+
+    <div>
+        <code data-ns-test="block-inline-code">Test1</code>
+        <code data-ns-test="block-inline-code">Test2</code>
+    </div>
+
+    <div data-ns-test="block-inline-h1">
+        Test1
+        <br>
+        Test2
+    </div>
+
+    <div>
+        <sup data-ns-test="block-inline-sup">Test1</sup>
+        <sup data-ns-test="block-inline-sup">Test2</sup>
+    </div>
+
+    <div>
+        <sub data-ns-test="block-inline-sub">Test1</sub>
+        <sub data-ns-test="block-inline-sub">Test2</sub>
+    </div>
 </body>
-
 </html>
